# gatekeeper

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONCERNS.md  CONTRIBUTING.md  README.md  SECURITY.md  SKILL.md  STATE.md  gatekeeper.py  pyproject.toml  test_gatekeeper.py
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  new_pattern.md
.github/workflows/: publish.yml  tests.yml
gatekeeper_scanner/: __init__.py  __main__.py  ast_scanner.py  core.py  models.py  osv.py  patterns.py  reporter.py  taint.py  yara_engine.py
gatekeeper_scanner/yara_rules/: malware.yar
