[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "gatekeeper-scanner"
version = "2.0.0.dev0"
description = "Security scanner for GitHub repos, MCP servers, AI agent packages, and local projects"
requires-python = ">=3.9"
license = "MIT"
authors = [{name = "Simcha Brodsky", email = "simcha@osint613.com"}]
readme = "README.md"
keywords = ["security", "scanner", "mcp", "ai-agent", "code-audit", "vulnerability"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Security",
    "Topic :: Software Development :: Quality Assurance",
]
dependencies = [
    # Signature engine is part of the default product: without it every scan
    # records a coverage gap and grades INCOMPLETE (unless --no-yara).
    "yara-python",
]

[project.urls]
Homepage = "https://github.com/skyblueso/gatekeeper"
Repository = "https://github.com/skyblueso/gatekeeper"
Issues = "https://github.com/skyblueso/gatekeeper/issues"
Changelog = "https://github.com/skyblueso/gatekeeper/blob/main/CHANGELOG.md"

[project.scripts]
gatekeeper = "gatekeeper_scanner.core:main"

[project.optional-dependencies]
dev = ["pip-audit", "yara-python"]
# YARA signature engine (webshells, miners, reverse shells, droppers).
# Without it, scans record a coverage gap and grade INCOMPLETE unless the
# operator explicitly passes --no-yara.
yara = ["yara-python"]
all = ["pip-audit", "yara-python"]

[tool.setuptools]
packages = ["gatekeeper_scanner"]
